--- a/GoClassificator/Dockerfile
+++ b/GoClassificator/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./ ./
+COPY . .
+
+RUN go build -o /main main.go
 
 EXPOSE 8080
 
-RUN go build -o main main.go
-
-CMD ["./main"]
+CMD ["/main"]
